# hoverbear.org

./: .gitignore  CNAME  Gemfile  Makefile  README.md  _config.yml  about.md  bower.json  config.toml  feed.xml  flake.nix  index.html  internationalized-hoverbear.json  main.css  projects.md  robots.txt  rss.xml  search_index.en.js  sitemap.xml  syntax-highlighting.css  tags.md  theme.toml
_data/: tags.yml
_drafts/: 2017-04-11-wrapping-apis-in-rust.md  2017-12-11-greasing-the-gears.md  qoutes.md  why-learn-rust.md
_includes/: connect.html  footer.html  head.html  header.html  javascript.html  javascripts.html  metadata.html
_layouts/: default.html  page.html  post.html  tag.html
_posts/: 2013-03-21-gathering-our-voices.md  2014-03-21-gathering-our-voices.md  2014-06-05-async-auto.md  2014-07-14-arch-docker-baseimage.md  2014-07-14-starting-with-immutant.md  2014-07-22-deploying-immutant-to-wildfly.md  2014-07-25-integrating-immutant-and-keycloak.md  2014-08-04-back-channel-keycloak-requests.md  2014-08-12-option-monads-in-rust.md  2014-09-07-command-execution-in-rust.md  2014-09-29-init-runlevels-and-targets.md  2014-11-02-a-ghost-openrc-script.md  2014-11-14-init-configuration.md  2014-11-15-command-line-args-in-rust.md  2014-11-15-lcis.md  2014-11-17-first-look-at-dacs.md  2014-11-23-openwrt-in-virtualbox.md  2014-12-03-vagrant-clients-for-openwrt-vms.md  2014-12-06-openwrt-qos.md  2015-01-21-raft.md  (+58 more)
content/blog/2022-01-01-configurable-nix-packages/demo/: .envrc  Cargo.toml  flake.nix
content/blog/2022-01-01-configurable-nix-packages/demo/src/: main.rs
(+393 files in other folders)
