[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
toml = { version = "0.5", default-features = false }
serde = { version = "1", default-features = false, features = [ "derive" ] }
color-eyre = { version = "0.5", default-features = false }
eyre = { version = "0.6", default-features = false }
